# yt-notify

./: Cargo.toml  out.txt
src/: main.rs  notif.rs  youtube.rs
