[package]
name = "yt-notify"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "3.6.3"
home = "0.5.3"
tokio = { version = "1", features = ["full"] }
easy-http-request = "0.2.12"
regex = "1.5.4"
chrono = "0.4.19"
json = "0.12.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"